--- a/.ebextensions/10_python.config
+++ b/.ebextensions/10_python.config
@@ -2,4 +2,4 @@ option_settings:
   "aws:elasticbeanstalk:application:environment":
     Django_SETTINGS_MODULE: "blog.settings"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: "blog/wsgi.py"
+    WSGIPath: blog.wsgi:application
