--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,8 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: config.wsgi:application
+    WSGIPath: blog.wsgi:application
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: config.settings
+    DJANGO_SETTINGS_MODULE: blog.settings
 container_commands:
   01_makemigrations:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
