--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,10 +3,18 @@ option_settings:
     WSGIPath: blog.wsgi:application
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: blog.settings
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
 container_commands:
   01_makemigrations:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
     leader_only: true
   02_migrate:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
+    leader_only: true
+  03_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
+    leader_only: true
+  04_createsu:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsu"
     leader_only: true
