--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,10 +1,11 @@
 branch-defaults:
   master:
-    environment: my-blog-pro-1
+    environment: hans-dev
+    group_suffix: null
 global:
-  application_name: my-blog
+  application_name: hans
   branch: null
-  default_ec2_keyname: aws-eb
+  default_ec2_keyname: null
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: ap-northeast-2
   include_git_submodules: true
